tests/baselines/reference/mergedDeclarations2.errors.txt
mergedDeclarations2.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedDeclarations2.ts(9,20): error TS2304: Cannot find name 'b'.


==== mergedDeclarations2.ts (2 errors) ====
    enum Foo {
        b
    }
    enum Foo {
        a = b
    }
    
    module Foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x = b
                       ~
!!! error TS2304: Cannot find name 'b'.
    }